// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`using Emblematic icon components > should add a class to the element 1`] = `
<div>
  <svg
    class="emblematic emblematic-ethereum-icon my-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      type="text"
      values="Ethereum"
    >
      Ethereum
    </title>
    <path
      d="M16 0 6.2 16.3l9.8-4.5V0Z"
      fill="#8891B1"
    />
    <path
      d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
      fill="#63688E"
    />
    <path
      d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
      fill="#464A75"
    />
    <path
      d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
      fill="#8891B1"
    />
    <path
      d="M16 24v8l9.8-13.8L16 24Z"
      fill="#63688E"
    />
  </svg>
</div>
`;

exports[`using Emblematic icon components > should add a class to the element 2`] = `
<svg
  class="emblematic emblematic-ethereum-icon my-icon"
  height="32"
  viewBox="0 0 32 32"
  width="32"
  xmlns="http://www.w3.org/2000/svg"
>
  <title
    type="text"
    values="Ethereum"
  >
    Ethereum
  </title>
  <path
    d="M16 0 6.2 16.3l9.8-4.5V0Z"
    fill="#8891B1"
  />
  <path
    d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
    fill="#63688E"
  />
  <path
    d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
    fill="#464A75"
  />
  <path
    d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
    fill="#8891B1"
  />
  <path
    d="M16 24v8l9.8-13.8L16 24Z"
    fill="#63688E"
  />
</svg>
`;

exports[`using Emblematic icon components > should add a style attribute to the element 1`] = `
<div>
  <svg
    class="emblematic emblematic-ethereum-icon"
    height="32"
    style="position: absolute;"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      type="text"
      values="Ethereum"
    >
      Ethereum
    </title>
    <path
      d="M16 0 6.2 16.3l9.8-4.5V0Z"
      fill="#8891B1"
    />
    <path
      d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
      fill="#63688E"
    />
    <path
      d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
      fill="#464A75"
    />
    <path
      d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
      fill="#8891B1"
    />
    <path
      d="M16 24v8l9.8-13.8L16 24Z"
      fill="#63688E"
    />
  </svg>
</div>
`;

exports[`using Emblematic icon components > should adjust the size 1`] = `
<div>
  <svg
    class="emblematic emblematic-ethereum-icon"
    height="48"
    size="48"
    viewBox="0 0 32 32"
    width="48"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      type="text"
      values="Ethereum"
    >
      Ethereum
    </title>
    <path
      d="M16 0 6.2 16.3l9.8-4.5V0Z"
      fill="#8891B1"
    />
    <path
      d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
      fill="#63688E"
    />
    <path
      d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
      fill="#464A75"
    />
    <path
      d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
      fill="#8891B1"
    />
    <path
      d="M16 24v8l9.8-13.8L16 24Z"
      fill="#63688E"
    />
  </svg>
</div>
`;

exports[`using Emblematic icon components > should pass children to the icon slot 1`] = `
<div>
  <svg
    class="emblematic emblematic-ethereum-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      type="text"
      values="Ethereum"
    >
      Ethereum
    </title>
    <path
      d="M16 0 6.2 16.3l9.8-4.5V0Z"
      fill="#8891B1"
    />
    <path
      d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
      fill="#63688E"
    />
    <path
      d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
      fill="#464A75"
    />
    <path
      d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
      fill="#8891B1"
    />
    <path
      d="M16 24v8l9.8-13.8L16 24Z"
      fill="#63688E"
    />
    
    <text>
      Temp Text
    </text>
    
  </svg>
</div>
`;

exports[`using Emblematic icon components > should render a component 1`] = `
<div>
  <svg
    class="emblematic emblematic-ethereum-icon"
    height="32"
    viewBox="0 0 32 32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      type="text"
      values="Ethereum"
    >
      Ethereum
    </title>
    <path
      d="M16 0 6.2 16.3l9.8-4.5V0Z"
      fill="#8891B1"
    />
    <path
      d="m16 11.8-9.8 4.5 9.8 5.8V11.8Zm9.8 4.5L16 0v11.8l9.8 4.5Z"
      fill="#63688E"
    />
    <path
      d="m16 22.1 9.8-5.8-9.8-4.5v10.3Z"
      fill="#464A75"
    />
    <path
      d="M6.2 18.2 16 32v-8l-9.8-5.8Z"
      fill="#8891B1"
    />
    <path
      d="M16 24v8l9.8-13.8L16 24Z"
      fill="#63688E"
    />
  </svg>
</div>
`;
